next
----

  fixes
   - improve conversion from stringz to json and json-c

Version 5.3.3
-------------

  change
   - propagate maximum payload length of websockets

Version 5.3.2
-------------

  fixes
   - release event manager when sync_cb must wait

Version 5.3.1
-------------

  fixes
   - fix bug in initialisation of rpc sockets

Version 5.3.0
-------------

  change
   - full handling of SOCKSPEC query parameters

  features
   - RPC over mTLS

Version 5.2.1
-------------

  fixes
   - ensure that jobs posted with a delay are correctly delayed

Version 5.2.0
-------------

  major versions of libafb and libafbcli is now 6 because of broken API

  fixes
   - fix memory crash when broadcasting many events
   - fix unsubscribing with RPC transport
   - fix aligning in RPC encoder
   - enforce chunk size of RPC v3 to be multiple of 8 (padding)
   - subset order of apiset for auto apis
   - force release of evmgr at thread end
   - fix potential deadlock when WITH_JOB_NOT_MONITORED not null
   - fix 100% CPU when 1 thread only required

  change
   - MAJOR change in event manager:
     - create on job per event listener instead of one job iterating on listeners
     - use listener's group for jobs
   - removed afb-wsapi files (from libafb and libafbcli)
   - use request group for reply's jobs

  features
   - added jobs with 2 arguments
   - management of group of request for replying job
   - management of group of listener for event jobs

Version 5.1.0
-------------

  fixes
   - unsubscription of wsapi and rpcapi server side (the unsubscription had
     no effect)

  change
   - remove references to json-locator
   - removed functions 'afb_sched_call_sync' and 'afb_sched_call_job_sync'
   - deprecation of function 'afb_sched_enter' replaced by 'afb_sched_sync'

Version 5.0.13
--------------

  fixes
   - compiling without systemd
   - explicit initialisation of event loop
   - releasing of the event loop as soon as possible